--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\Hugh\\Anaconda3\\envs\\rango\\python.exe"
+    "python.pythonPath": "C:\\Users\\Hugh\\Anaconda3\\envs\\rango\\python.exe",
+    "python.formatting.provider": "autopep8"
 }
